Modification of listening element in thumbnails.Add invisible button to avoid spread in the DOM

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body{
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 #body-container{
@@ -74,6 +75,8 @@ ul, li{
     flex-direction: row;
     margin: 0 auto;
 }
+
+
 @media only screen and (min-width : 375px) {
     .burger{
         display: none;
@@ -147,22 +150,39 @@ nav{
 }
 
 .item{
+    position: relative;
     background-color: #e6d1d1;
-    height: 20vh;
     justify-content: flex-end;
+    align-items: center;
     flex-wrap: wrap;
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
     border: 1px solid #ED6C6D;
     box-shadow: 3px 2px 7px grey;
-    padding: 0px 10px 0px;
     border-radius: 10px;
-    transform: translate(0);
     transition-duration: 1s;
 }
 
-.invert{
+.header{
+    height: 20vh;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 10px 0px;
+}
+
+.button{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20vh;
+    opacity: 0;
+    z-index: 10;
+    padding: 0;
+}
+
+.invert-header{
     flex-direction: row-reverse;
     text-align: start;
 }
@@ -187,7 +207,7 @@ nav{
     display: none;
 }
 
-.hidden + .invert{
+.hidden + .invert-container{
     translate: -110vw;
     transition-duration: 1s;
 }
@@ -200,7 +220,8 @@ nav{
     overflow: scroll;
     position: relative;
     z-index: 10;
-
+    transform: scaleY();
+    transition-duration: 1s;
 }
 
 .open .text-description{
